--- a/Example/Podfile
+++ b/Example/Podfile
@@ -7,8 +7,8 @@ target 'RRPager_Example' do
     inherit! :search_paths
 
     pod 'Specta'
-  pod 'Expecta'
-  pod 'FBSnapshotTestCase'
-  pod 'Expecta+Snapshots'
+#  pod 'Expecta'
+#  pod 'FBSnapshotTestCase'
+#  pod 'Expecta+Snapshots'
   end
 end
